[gd_scene load_steps=10 format=2]

[ext_resource path="res://5 - Hazards/Zombie/olliezombie.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/Enemy/GiantOllie.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.6, 6.45 )

[sub_resource type="Animation" id=7]
resource_name = "Dead"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -20.9, 31.3, 73.0, 114.7, 90.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 1, 1, 1, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.945098, 0.478431, 0.478431, 1 ), Color( 0.890196, 0.192157, 0.192157, 1 ), Color( 0.933333, 0.521569, 0.521569, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Run"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4.5, 7.5 )

[sub_resource type="CircleShape2D" id=9]
radius = 16.6027

[node name="Enemy1" type="KinematicBody2D"]
position = Vector2( 82, 98 )
scale = Vector2( 10, 10 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.8, 1.15 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.5, 0.5 )
scale = Vector2( 0.0698925, 0.0776256 )
texture = ExtResource( 1 )
hframes = 8
frame = 6

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "Run"
anims/Dead = SubResource( 7 )
anims/Hurt = SubResource( 6 )
anims/RESET = SubResource( 2 )
anims/Run = SubResource( 3 )

[node name="PathDetector" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PathDetector"]
modulate = Color( 0.6875, 0.0664673, 0.0664673, 1 )
position = Vector2( -0.5, -0.5 )
shape = SubResource( 4 )

[node name="hitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 5

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="hitBox"]
position = Vector2( -0.5, 0.5 )
polygon = PoolVector2Array( -0.3, -6.5, 1.7, -6.1, 3.4, -5.1, 4.5, -3.1, 4.7, -1.3, 4.1, 0.4, 3, 1.1, 2.2, 1.8, 1.9, 3, 2.2, 5.4, 2.6, 6, -2.9, 5.8, -3.1, 4.4, -2.8, 3.1, -3.4, 2.6, -4.5, 2.2, -4.6, 1, -3.9, 0.6, -4.8, -1.1, -4.4, -3.5, -2.8, -5.4 )
disabled = true

[node name="eye1" type="Position2D" parent="."]
position = Vector2( -0.6, 0 )

[node name="eye2" type="Position2D" parent="."]
position = Vector2( -3.8, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="targetArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="targetArea"]
position = Vector2( -1.2, -0.9 )
shape = SubResource( 9 )

[node name="SFX" type="AudioStreamPlayer2D" parent="."]
bus = "SFX"

[connection signal="area_entered" from="hitBox" to="." method="_on_hitBox_area_entered"]
[connection signal="body_entered" from="hitBox" to="." method="_on_hitBox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="targetArea" to="." method="_on_targetArea_body_entered"]
[connection signal="body_exited" from="targetArea" to="." method="_on_targetArea_body_exited"]
